<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#0288D1"
        >
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_height"
        android:hint="@string/lbl_name"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textColorHint="#0288D1"
    >
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/lbl_pwd"
        android:textColor="#0288D1"
        />
</android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:background="#0288D1"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
